# biomlbench

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  OPENPROBLEMS_INTEGRATION_GUIDE.md  OPENPROBLEMS_POC_GUIDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
agents/: README.md  registry.py  run.py  utils.py
agents/aide/: Dockerfile  additional_notes.txt  config.yaml  requirements.txt  start.sh
agents/autobioml/: .gitignore  Dockerfile  README.md  adapter.py  additional_notes.txt  autobioml_wrapper.py  config.yaml  convert_output.py  requirements.txt  start.sh
agents/biomni/: Dockerfile  additional_notes.txt  config.yaml  fix_rdkit.py  main.py  pre_download_data.py  start.sh  verify_data_download.py
agents/dummy/: Dockerfile  main.py  start.sh
agents/mlagentbench/: Dockerfile  config.yaml  start.sh
agents/opendevin/: Dockerfile  additional_notes.txt  build.sh  config.yaml  entrypoint.sh  requirements.txt  setup.py  start.py  start.sh  templates.py  utils.py
agents/stella/: Dockerfile  additional_notes.txt  config.yaml  main.py  requirements.txt  start.sh
analysis_outputs/: table_by_domain.tex  table_model_usage.tex  table_overall.tex  table_strategy_usage.tex  tables_standalone.tex
api/agents/: index.html
api/cli/: index.html
api/data_sources/: index.html
api/grading/: index.html
api/overview/: index.html
api/registry/: index.html
api/tasks/: index.html
api/utils/: index.html
biomlbench/: __init__.py  agents.py  baselines.py  cli.py  data.py  grade.py  grade_helpers.py  registry.py  s3_utils.py  utils.py
biomlbench/data_sources/: __init__.py  base.py  factory.py  kaggle.py  manual.py  openproblems.py  polaris.py  proteingym.py
biomlbench/tasks/: __init__.py  utils.py
components/agents/: index.html
components/environment/: index.html
components/scripts/: index.html
components/task_development/: index.html
deploy/aws-deploy/: README.md  deploy-aws.py  fast-entrypoint.sh  production-cpu-jobs.txt  stella_core.py
deploy/gcp-deploy/: README.md  deploy.py  production-gpu-jobs.txt
developer/adding_tasks/: index.html
developer/architecture/: index.html
developer/contributing/: index.html
developer/creating_agents/: index.html
docs/: deployment.md  environment-variables.md  index.md  installation.md  usage.md
docs/api/: agents.md  cli.md  (+6 more)
environment/: Dockerfile  defaults.py  entrypoint.sh  grading_server.py  instructions.txt  instructions_obfuscated.txt  requirements.txt  utils.py  validate_submission.sh
experiments/: biomlbench_v0.1a.txt  make_submission.py
installation/: index.html
scripts/: README_prepare_tasks.md  analyze_results.py  analyze_results_nozerofail.py  analyze_results_old.py  build_agent.sh  build_agent_enhanced.sh  build_base_env.sh  build_docs.sh  cleanup_dummy_artifacts.py  compare_package_impact.py  deploy-docs.sh  extract_cli_help.py  find_failed_gradings.py  find_missing_grades.py  find_populated_leaderboards.py  fix_all_submission_paths.py  generate_latex_tables.py  generate_production_jobs.py  ingest_openproblems.py  ingest_polaris.py  ingest_proteingym.py  killall_docker.sh  monitor_system.py  polarishub_tasks.csv  prep_test_kaggle.sh  prepare_all_tasks.py  prepare_all_tasks.sh  prepare_tasks_from_file.sh  pull_prebuilt_images.sh  robust_postprocess.py  serve_docs.sh  spend_anthropic.py  test_agent_pipeline.py  test_environment.sh  validate_environment.sh  visualize_drug_discovery_package_impact.py  visualize_failure_modes.py  visualize_protein_engineering_package_impact.py  visualize_results.py  visualize_single_cell_package_impact.py  (+2 more)
search/: search_index.json
usage/: index.html
(+2556 files in other folders)
